config sidebar fix overflow-y hide

--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -121,7 +121,7 @@
 
             </nav>
 
-            <nav class="navbar navbar-expand-md navbar-dark double-nav red darken-2 fixed-top">
+            <nav class="navbar navbar-expand-md navbar-dark double-nav red darken-2 fixed-top hidden-lg hidden-md ">
                
                 <!-- SideNav slide-out button -->
                 <div class="float-right">
@@ -130,8 +130,8 @@
                     </a>
                 </div>
             </nav>
-            <div id="slide-out" class="side-nav  fixed red darken-2" style="transform: translateX(-100%);">
-                <ul class="custom-scrollbar list-unstyled">
+            <div id="slide-out" class="side-nav  fixed blue-gradient darken-2  hidden-lg hidden-md" style="transform: translateX(-100%);">
+                <ul class="custom-scrollbar list-unstyled scrollbar scrollbar-danger" >
                     <!-- Logo -->
                     <li class="logo-sn waves-effect">
                         <div class="text-center">
@@ -206,8 +206,32 @@
                                     <i class="fa fa-envelope-o"></i> Contact me
                                     <i class="fa fa-angle-down rotate-icon"></i>
                                 </a>
-                                <div class="collapsible-body">
+                                <div class="collapsible-body" >
                                     <ul>
+                                        <li>
+                                            <a href="#" class="waves-effect">FAQ</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="waves-effect">Write a message</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="waves-effect">FAQ</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="waves-effect">Write a message</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="waves-effect">FAQ</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="waves-effect">Write a message</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="waves-effect">FAQ</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="waves-effect">Write a message</a>
+                                        </li>
                                         <li>
                                             <a href="#" class="waves-effect">FAQ</a>
                                         </li>
