--- a/BlogHealth/Views/Home/Index.cshtml
+++ b/BlogHealth/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
                             <div class="row">
 
                                 <!--Grid column-->
-                                <div class="col-lg-5 col-sm-12 col-xs-12 mb-1 pr-lg-1 px-sm-5">
+                                <div class="col-lg-5 col-sm-12 col-xs-12 mb-1 pr-lg-1 pr-md-1 px-sm-5">
                                     <!--Featured image-->
                                     <div class="view overlay hm-white-slight z-depth-1-half">
                                         <img src="https://mdbootstrap.com/img/Photos/Others/img (38).jpg" class="img-fluid" alt="First sample image">
