--- a/BlogHealth/AdminAsset/css/style.css
+++ b/BlogHealth/AdminAsset/css/style.css
@@ -61,10 +61,10 @@ body {
 }
 
 .scrollbar {
-    margin-left: 30px;
-    float: left;
+    /*margin-left: 30px;*/
+    /*float: left;*/
     height: inherit;
-    width: 13em;
+    /*width: 13em;*/
     /*background: #fff;*/
     overflow-y: scroll;
     margin-bottom: 25px;
