--- a/BlogHealth/Views/Home/Post.cshtml
+++ b/BlogHealth/Views/Home/Post.cshtml
@@ -4,8 +4,8 @@
 }
 
 
-<div class="col-xl-9  pl-lg-4 pl-xl-4 pr-lg-2 pr-xl-2">
-    <div class="card mb-2">
+<div class="col-xl-9  pl-lg-4 pl-xl-4 pr-lg-2 pr-xl-2" id="left" >
+    <div class="card mb-2" id="sidebar">
         <div class="card-body">
             <div class="card-title text-danger text-center">
                 <h2> Cựu sáng lập Thế Giới Di Động mơ có 1.000 shop giày, bán hàng như Zara</h2>
