--- a/BlogHealth/AdminAsset/css/style.css
+++ b/BlogHealth/AdminAsset/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 body {
-    background-color: #fff;
+    background-color: #eee;
 }
 
 .side-nav .logo-sn {
@@ -195,4 +195,7 @@ body {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
     background-color: #aa66cc;
+}
+.teststicky{
+    position
 }
