--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -273,7 +273,7 @@
     </header>
 
 
-    <div class="container-fluid " id="main-content">
+    <div class="container-fluid " id="main-content" data-sticky-container>
         @*<div class="col-xl-12 my-2 ">
 
                 <div class="font-up ">
@@ -288,18 +288,18 @@
 
                 </div>
             </div>*@
-        <div class="row mt-3 ">
+        <div class="row mt-3" id="">
             @RenderBody()
 
-            <div class="col-xl-3" id="sidebar">
+            <div class="col-xl-3 px-1 " id="SideBar" >
                 @*id="scroller-anchor"*@
             <div class="row">
                 @*id="scroller"*@
                 <div class="col-xl-12 mb-2">
-                    <ul class="nav nav-tabs nav-justified p-2 white">
+                    <ul class="nav nav-tabs nav-justified pb-1 pt-0 px-0 blue">
                         <li class="nav-item  waves-effect waves-dark m-0">
-                            <a class="nav-link active p-1 blue darken-1" data-toggle="tab" href="#panelHot" role="tab">
-                                <h5 class="text-white  section-heading h5 m-0">
+                            <a class="nav-link active p-1 white darken-1" data-toggle="tab" href="#panelHot" role="tab">
+                                <h5 class="blue-text section-heading h5 m-0">
                                     <i class="fa fa-eye"></i>&nbsp; Xem nhiều nhất
                                 </h5>
                             </a>
@@ -543,21 +543,17 @@
                     </div>
                 </div>
                 <div class="col-xl-12 mb-2">
-                    <ul class="nav nav-tabs nav-justified p-2 white">
+                    <ul class="nav nav-tabs nav-justified pb-1 pt-0 px-0 blue">
                         <li class="nav-item  waves-effect waves-dark m-0">
-                            <a class="nav-link active p-1 blue darken-1" data-toggle="tab" href="#panelSocial" role="tab">
-                                <h5 class="text-white section-heading h5 m-0">
+                            <a class="nav-link active p-1 white darken-1" data-toggle="tab" href="#panelSocial" role="tab">
+                                <h5 class="blue-text section-heading h5 m-0">
 
                                     <i class="fa fa-users "></i>&nbsp; Mạng xã hội
 
 
                                 </h5>
                             </a>
-                            <div class="row">
-                                <div class="progress primary-color-dark">
-                                    <div class="indeterminate"></div>
-                                </div>
-                            </div>
+                            
                         </li>
 
                     </ul>
@@ -597,10 +593,10 @@
                     </div>
                 </div>
                 <div class="col-xl-12 mb-2">
-                    <ul class="nav nav-tabs nav-justified p-2 white">
+                    <ul class="nav nav-tabs nav-justified pb-1 pt-0 px-0 blue">
                         <li class="nav-item  waves-effect waves-dark m-0">
-                            <a class="nav-link active p-1 blue darken-1" data-toggle="tab" href="#panelSocial" role="tab">
-                                <h5 class="text-white section-heading h5 m-0">
+                            <a class="nav-link active p-1 white darken-1" data-toggle="tab" href="#panelSocial" role="tab">
+                                <h5 class="blue-text section-heading h5 m-0">
 
                                     <i class="fa fa-comments"></i>&nbsp;Top bình luận
 
@@ -796,16 +792,19 @@
     <script src="~/HomeAsset/js/ResizeSensor.js"></script>
 *@
 <script src="~/AdminAsset/js/jquery-3.2.1.min.js"></script>
+
 <script src="~/AdminAsset/js/popper.min.js"></script>
 <script src="~/AdminAsset/js/bootstrap.min.js"></script>
 <script src="~/AdminAsset/js/mdb.min.js"></script>
-
+<script src="~/AdminAsset/js/ResizeSensor.js"></script>
 <script src="~/AdminAsset/js/Myscript.js"></script>
 
 @*<script src="~/HomeAsset/js/Myscript.js"></script>*@
 
 <script>
-
+  
+    //var elements = $('.sticky');
+    //Stickyfill.add(elements);
     //var length = $('#left').height() - $('#sidebar').height() + $('#left').offset().top;
 
     //$(window).scroll(function () {
@@ -850,8 +849,6 @@
         //$('.leftSidebar').stickyfloat({ duration: 400 });
         $(".button-collapse").sideNav();
         //moveScroller();
-
-       
 
     });
 
