--- a/BlogHealth/Views/Home/Index.cshtml
+++ b/BlogHealth/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     </style>
 }
 
-    <div class="col-xl-3 hidden-sm-down leftSidebar" id="sidebarLeft">
+    <div class="col-xl-3 hidden-sm-down MainContent" id="">
         @*<h4 class="text-success section-heading h4">Bài viết nổi bật</h4>*@
         <div class="row">
             <div class="col-xl-12 mb-1 ">
@@ -275,7 +275,7 @@
 
 
     </div>
-    <div class="col-xl-6" id="MainContent">
+    <div class="col-xl-6 MainContent" id="MainContent">
         @*<h4 class="text-success section-heading h4">Bài viết</h4>*@
         <ul class="nav nav-tabs nav-justified p-2 white">
             <li class="nav-item  waves-effect waves-dark m-0">
