--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -273,7 +273,7 @@
     </header>
 
 
-    <div class="container-fluid " id="main-content" data-sticky-container>
+    <div class="container-fluid " id="main-content" >
         @*<div class="col-xl-12 my-2 ">
 
                 <div class="font-up ">
@@ -288,12 +288,12 @@
 
                 </div>
             </div>*@
-        <div class="row mt-3" id="">
+        <div class="row mt-3 " id="">
             @RenderBody()
 
-            <div class="col-xl-3 px-1 " id="SideBar" >
+            <div class="col-xl-3 px-1 SideBar " id="" >
                 @*id="scroller-anchor"*@
-            <div class="row">
+            <div class="row theiaStickySidebar">
                 @*id="scroller"*@
                 <div class="col-xl-12 mb-2">
                     <ul class="nav nav-tabs nav-justified pb-1 pt-0 px-0 blue">
@@ -792,17 +792,23 @@
     <script src="~/HomeAsset/js/ResizeSensor.js"></script>
 *@
 <script src="~/AdminAsset/js/jquery-3.2.1.min.js"></script>
+<script src="~/HomeAsset/js/ResizeSensor.js"></script>
+<script src="~/HomeAsset/js/theia-sticky-sidebar.js"></script>
 
 <script src="~/AdminAsset/js/popper.min.js"></script>
 <script src="~/AdminAsset/js/bootstrap.min.js"></script>
 <script src="~/AdminAsset/js/mdb.min.js"></script>
-<script src="~/AdminAsset/js/ResizeSensor.js"></script>
 <script src="~/AdminAsset/js/Myscript.js"></script>
 
 @*<script src="~/HomeAsset/js/Myscript.js"></script>*@
 
 <script>
-  
+    $(document).ready(function () {
+        $('.MainContent, .SideBar').theiaStickySidebar({
+            // Settings
+            additionalMarginTop: 40
+        });
+    });
     //var elements = $('.sticky');
     //Stickyfill.add(elements);
     //var length = $('#left').height() - $('#sidebar').height() + $('#left').offset().top;
