--- a/BlogHealth/Views/Home/Posts.cshtml
+++ b/BlogHealth/Views/Home/Posts.cshtml
@@ -3,9 +3,9 @@
     ViewBag.Title = "Danh sách bài viết";
 }
 
-<div class="col-xl-9  pl-lg-4 pl-xl-4 pr-lg-2 pr-xl-2">
+<div class="col-xl-9  pl-lg-4 pl-xl-4 pr-lg-2 pr-xl-2 MainContent">
 
-    <div class="card mb-2">
+    <div class="card mb-2 theiaStickySidebar">
         <div class="card-body">
             <div class="container-fluid">
                 <a class="h4-responsive text-danger" href="/"><strong>Danh mục</strong></a>
