change header top

--- a/BlogHealth/Views/Home/Posts.cshtml
+++ b/BlogHealth/Views/Home/Posts.cshtml
@@ -37,7 +37,7 @@
                                     <p class="card-text">
                                         Diễn viên xinh đẹp Nhã Phương đã có những chia sẻ xoay quanh mối quan hệ với đồng nghiệp cũng như chuyện tình cảm...
                                     </p>
-                                    <div class="d-flex flex-row-reverse">
+                                    <div class="card-footer d-flex flex-row-reverse py-0 px-1">
                                         <small class="text-muted ml-2"><i class="fa fa-comment-o"></i>100</small>
                                         <small class="text-muted ml-2"><i class="fa fa-eye" aria-hidden="true"></i>100</small>
                                         <small class="text-muted ml-2"><i class="fa fa-share-alt"></i>100</small>
