--- a/BlogHealth/Views/Home/Index.cshtml
+++ b/BlogHealth/Views/Home/Index.cshtml
@@ -12,10 +12,10 @@
         @*<h4 class="text-success section-heading h4">Bài viết nổi bật</h4>*@
         <div class="row">
             <div class="col-xl-12 mb-1 ">
-                <ul class="nav nav-tabs nav-justified p-2 white">
+                <ul class="nav nav-tabs nav-justified pb-1 pt-0 px-0 blue">
                     <li class="nav-item  waves-effect waves-dark m-0">
-                        <a class="nav-link active p-1 blue darken-1" data-toggle="tab" href="#panelHot" role="tab">
-                            <h5 class="text-white section-heading h5 m-0">
+                        <a class="nav-link active p-1 white darken-1" data-toggle="tab" href="#panelHot" role="tab">
+                            <h5 class="blue-text section-heading h5 m-0">
                                 <i class="fa fa-arrow-up"></i>&nbsp; Nổi bật
                             </h5>
                         </a>
@@ -277,10 +277,10 @@
     </div>
     <div class="col-xl-6 MainContent" id="MainContent">
         @*<h4 class="text-success section-heading h4">Bài viết</h4>*@
-        <ul class="nav nav-tabs nav-justified p-2 white">
+        <ul class="nav nav-tabs nav-justified pb-1 pt-0 px-0 blue">
             <li class="nav-item  waves-effect waves-dark m-0">
-                <a class="nav-link active p-1 blue darken-1" data-toggle="tab" href="#panelPosts" role="tab">
-                    <h5 class="text-white section-heading h5 m-0">
+                <a class="nav-link active p-1 white darken-1" data-toggle="tab" href="#panelPosts" role="tab">
+                    <h5 class="blue-text section-heading h5 m-0">
                        
                             <i class="fa fa-newspaper-o"></i>&nbsp; Bài viết
                         
