--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
     <header>
         <div class="container-fluid" id="header">
             <div class="row hidden-md-down">
-                <div class="col-lg-12  px-5 mb-1 py-1 info-color">
+                <div class="col-lg-12  px-5 mb-1 py-1 primary-color">
                     <div class="d-flex justify-content-end">
                         <div class="mr-auto py-0">
                             @*<!--Facebook-->
@@ -34,20 +34,20 @@
 
                                 <!--Instagram-->
                                 <a href="https://www.instagram.com/lehieubt3/" target="_blank" class="icons-sm ins-ic ml-4 py-0" data-toggle="tooltip" data-placement="bottom" title="Chúng tôi trên instagram"><i class="fa fa-instagram"> </i></a>*@
-                            <span class="white-text"><small><i class="fa fa-calendar"></i>&nbsp;@DateTime.Now.ToString("dddd, dd/MM/yyyy", CultureInfo.CreateSpecificCulture("vi-VN"))</small></span>
+                            <span class=""><small><i class="fa fa-calendar"></i>&nbsp;@DateTime.Now.ToString("dddd, dd/MM/yyyy", CultureInfo.CreateSpecificCulture("vi-VN"))</small></span>
                         </div>
-                        <div class="pl-1 py-0 nav-item">
-                            <a class="nav-link py-0 white-text" ><small> <i class="fa fa-handshake-o"></i>Đối tác</small></a>
+                        <div class="pl-1 py-0 ">
+                            <a class="nav-link py-0 " ><small> <i class="fa fa-handshake-o"></i>Đối tác</small></a>
 
                         </div>
-                        <div class="pl-1 py-0 nav-item">
-                            <a class="nav-link py-0 white-text" href="#"><small><i class="fa fa-share-square-o"></i>Giới thiệu</small></a>
+                        <div class="pl-1 py-0 ">
+                            <a class="nav-link py-0 " href="#"><small><i class="fa fa-share-square-o"></i>Giới thiệu</small></a>
                         </div>
-                        <div class="pl-1 py-0 nav-item">
-                            <a class="nav-link py-0 white-text" href="#"><small><i class="fa fa-phone"></i>Liên hệ</small></a>
+                        <div class="pl-1 py-0">
+                            <a class="nav-link py-0 " href="#"><small><i class="fa fa-phone"></i>Liên hệ</small></a>
                         </div>
-                        <div class="pl-1 pr-3 py-0 nav-item">
-                            <a class="nav-link py-0 white-text" href="#"><small><i class="fa fa-thumbs-o-up"></i>Đóng góp</small></a>
+                        <div class="pl-1 pr-3 py-0">
+                            <a class="nav-link py-0 " href="#"><small><i class="fa fa-thumbs-o-up"></i>Đóng góp</small></a>
                         </div>
                     </div>
                 </div>
