--- a/BlogHealth/AdminAsset/css/style.css
+++ b/BlogHealth/AdminAsset/css/style.css
@@ -75,8 +75,6 @@ body {
     min-height: 450px;
 }
 
-
-
 .scrollbar-primary::-webkit-scrollbar-thumb {
     border-radius: 10px !important;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1) !important;
@@ -196,6 +194,12 @@ body {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
     background-color: #aa66cc;
 }
-.teststicky{
-    position
+header, main, footer {
+    padding-left: 240px;
+}
+
+@media only screen and (max-width : 992px) {
+    header, main, footer {
+        padding-left: 0;
+    }
 }
