--- a/BlogHealth/AdminAsset/css/style.css
+++ b/BlogHealth/AdminAsset/css/style.css
@@ -194,9 +194,9 @@ body {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
     background-color: #aa66cc;
 }
-header, main, footer {
+/*header, main, footer {
     padding-left: 240px;
-}
+}*/
 
 @media only screen and (max-width : 992px) {
     header, main, footer {
