--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -20,38 +20,66 @@
 </head>
 <body>
     <header>
-        <div class="container-fluid" id="header">
-            <div class="row hidden-md-down">
-                <div class="col-lg-12  px-5 mb-1 py-1 primary-color">
-                    <div class="d-flex justify-content-end">
-                        <div class="mr-auto py-0">
-                            @*<!--Facebook-->
-                                <a href="https://www.facebook.com/caohieuchamcom/" target="_blank" class="icons-sm fb-ic ml-4 py-0" data-toggle="tooltip" data-placement="bottom" title="Chúng tôi trên facebook"> <i class="fa fa-facebook"> </i></a>
-                                <!--Twitter-->
-                                <a href="https://twitter.com/intent/tweet?text=https://caohieu.com/" target="_blank" class="icons-sm tw-ic ml-4 py-0" data-toggle="tooltip" data-placement="bottom" title="Chúng tôi trên twitter"><i class="fa fa-twitter"> </i></a>
-                                <!--Google +-->
-                                <a href="" class="icons-sm gplus-ic ml-4 py-0" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Chúng tôi trên google+"><i class="fa fa-google-plus"> </i></a>
-
-                                <!--Instagram-->
-                                <a href="https://www.instagram.com/lehieubt3/" target="_blank" class="icons-sm ins-ic ml-4 py-0" data-toggle="tooltip" data-placement="bottom" title="Chúng tôi trên instagram"><i class="fa fa-instagram"> </i></a>*@
-                            <span class=""><small><i class="fa fa-calendar"></i>&nbsp;@DateTime.Now.ToString("dddd, dd/MM/yyyy", CultureInfo.CreateSpecificCulture("vi-VN"))</small></span>
-                        </div>
-                        <div class="pl-1 py-0 ">
-                            <a class="nav-link py-0 " ><small> <i class="fa fa-handshake-o"></i>Đối tác</small></a>
-
-                        </div>
-                        <div class="pl-1 py-0 ">
-                            <a class="nav-link py-0 " href="#"><small><i class="fa fa-share-square-o"></i>Giới thiệu</small></a>
-                        </div>
-                        <div class="pl-1 py-0">
-                            <a class="nav-link py-0 " href="#"><small><i class="fa fa-phone"></i>Liên hệ</small></a>
-                        </div>
-                        <div class="pl-1 pr-3 py-0">
-                            <a class="nav-link py-0 " href="#"><small><i class="fa fa-thumbs-o-up"></i>Đóng góp</small></a>
-                        </div>
+        <div class="container-fluid p-0" id="header">
+            <nav class="navbar navbar-expand-lg navbar-light scrolling-navbar grey lighten-2 hidden-sm p-0" style="box-shadow: 0 1px 0px 0 rgba(0,0,0,.16)!important;">
+                <div class="container p-0">
+                    <!-- SideNav slide-out button -->
+                    @*<div class="float-left mr-2">
+                        <a href="#" data-activates="slide-out" class="button-collapse">
+                            <i class="fa fa-calendar"></i>
+                        </a>
                     </div>
-                </div>
-            </div>
+                    <a class="navbar-brand font-bold" href="#">
+                        <strong></strong>
+                    </a>*@
+                    <div class="float-left border border-left-0 border-top-0 border-bottom-0 border-primary">
+                        <ul class="navbar-nav ">
+                            <li class="nav-item ">
+                                <a class="nav-link dark-grey-text font-bold waves-effect waves-light py-1" href="#" data-toggle="modal" data-target="#cart-modal-ex">
+
+                                    <i class="fa fa-calendar blue-text" aria-hidden="true"></i>
+                                    <span class="clearfix d-none d-sm-inline-block">@DateTime.Now.ToString("dddd, dd/MM/yyyy", CultureInfo.CreateSpecificCulture("vi-VN"))</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="float-left ml-1 col-6 p-0 ">
+                        <form class="form-inline waves-effect waves-dark hidden-md-down ">
+                            <i class="fa fa-search prefix blue-text"></i>
+                            <input class="form-control col-11 pt-1 pb-2 ml-1 dark-grey-text border-primary" type="text" placeholder="Tìm kiếm bài viết..." aria-label="Search">
+                        </form>
+                    </div>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
+                            <ul class="navbar-nav ml-auto">
+                                <li class="nav-item ">
+                                    <a class="nav-link dark-grey-text font-bold waves-effect waves-light py-1" href="#" data-toggle="modal" data-target="#cart-modal-ex">
+                                        <span class="badge danger-color">4</span>
+                                        <i class="fa fa-shopping-cart blue-text" aria-hidden="true"></i>
+                                        <span class="clearfix d-none d-sm-inline-block">Cart</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item ml-3">
+                                    <a class="nav-link waves-effect waves-light dark-grey-text font-bold py-1" href="#">
+                                        <i class="fa fa-gear blue-text"></i> Settings
+                                    </a>
+                                </li>
+                                <li class="nav-item dropdown ml-3">
+                                    <a class="nav-link dropdown-toggle waves-effect waves-light dark-grey-text font-bold py-1" id="navbarDropdownMenuLink-4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <i class="fa fa-user blue-text"></i> Profile
+                                    </a>
+                                    <div class="dropdown-menu dropdown-menu-right dropdown-danger" aria-labelledby="navbarDropdownMenuLink-4" style="display: none; position: absolute;">
+                                        <a class="dropdown-item waves-effect waves-light" href="#">My account</a>
+                                        <a class="dropdown-item waves-effect waves-light" href="#">Log out</a>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+</div>
+            </nav>
             <!--Navbar-->
 
             <div class="my-5">
@@ -97,22 +125,7 @@
 
                     </ul>
                     <!-- Links -->
-                    <!-- Search form -->
-                    <form class="form-inline waves-effect waves-dark hidden-md-down ">
-                        @*<div class="sm-form  input-group">*@
-                        <i class="fa fa-search prefix red-text"></i>
-                        @*<span class="input-group-btn">
-                                <button class="btn btn-default btn-sm" type="button">Hate it</button>
-                            </span>*@
-                        <input class="form-control" type="text" placeholder="Tìm kiếm bài viết..." aria-label="Search">
-                        @*<span class="input-group-btn">
-                                <button class="btn btn-primary btn-sm" type="button">Tìm kiếm</button>
-                            </span>*@
-                        @*</div>*@
-
-                        @*<button class="btn btn-outline-primary btn-sm my-0 waves-effect" type="submit"><i class="fa fa-search"></i></button>*@
-                    </form>
-
+            
 
 
                 </div>
@@ -120,12 +133,12 @@
 
             </nav>
 
-            <nav class="navbar navbar-expand-md navbar-dark double-nav red darken-2 fixed-top hidden-lg hidden-md p-0">
+            <nav class="navbar navbar-expand-md navbar-dark double-nav red darken-2 fixed-top hidden-lg hidden-md py-0 px-5">
 
                 <!-- SideNav slide-out button -->
-                <div class="float-right">
+                <div class="float-right ml-auto pr-2">
                     <a href="#" data-activates="slide-out" class="button-collapse">
-                        <i class="fa fa-bars"></i> &nbsp;DANH MỤC
+                         DANH MỤC &nbsp;<i class="fa fa-bars"></i>
                     </a>
                 </div>
             </nav>
@@ -852,7 +865,9 @@
         //var sidebar = document.getElementById('sidebar');
         //Stickyfill.add(sidebar);
         //$('.leftSidebar').stickyfloat({ duration: 400 });
-        $(".button-collapse").sideNav();
+        $(".button-collapse").sideNav({
+            edge: 'right',
+        });
         //moveScroller();
 
     });
