delete another language

--- a/BlogHealth/Views/Shared/LayoutAdmin.cshtml
+++ b/BlogHealth/Views/Shared/LayoutAdmin.cshtml
@@ -212,9 +212,10 @@
     <script src="~/AdminAsset/js/mdb.min.js"></script>
     
     <script src="~/ckfinder/ckfinder.js"></script>
+    @*<script src="~/ckfinder/ckfinder_v1.js"></script>*@
     <!-- Initializations -->
-    <script>
-        
+<script>
+
         //$('#btnshownavbar').hover(function(){
         //    alert('hover');
         //    //$('.button-collapse').sideNav('show');
@@ -243,9 +244,9 @@
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
         })
-    </script>
-    @* <div class="drag-target" style="left: 0px; touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></div>*@
-
+</script>
+@* <div class="drag-target" style="left: 0px; touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></div>*@
+   
     <!-- Charts -->
     <script>
         // Minimalist chart
